fix overflow

--- a/app/css/globals.scss
+++ b/app/css/globals.scss
@@ -15,6 +15,9 @@
 body {
   color: rgb(var(--foreground-rgb));
   background-color: #0d1224;
+  @media(max-width: 768px) {
+    overflow-x: hidden !important;
+  }
 }
 
 #sticky-card-1 {
